--- a/index.css
+++ b/index.css
@@ -17,29 +17,38 @@
 }
 
 .webpage {
-    width: 65em;
+    width: 55em;
     margin: 1.5em 0;
 }
 
+.tablet {
+    width: 28em;
+    margin: 1.5em 1em;
+}
+
+.phone {
+    width: 17em;
+    margin: 1.5em 1em;
+}
+
 .section {
-    margin: 1em 12em;
+    margin: 1em 18em;
     text-align: flex-start;
 
 }
 
 
-h1, h2, h3, p, li, figcaption { 
+
+h1, h2, h3, h4, h5, h6 p, li, figcaption { 
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    color: #f2f7f2
+    color: #000
     }
 
 figcaption {
     text-align: center;
 }
 a, a:link, a:hover, a:visited, a:active {
-    color: #FF709D;
-}
-body {
-    background-color: #4B6ABE;
+    color: #0466c8;
+    font-weight:bold;
 }
 
